--- a/index.html
+++ b/index.html
@@ -26,46 +26,98 @@
       <a href="https://github.com/68mutuba" class="go_github"><i class="fab fa-github"></i></a>
     </div>
   </div>
-  <div class="clickspace">
-    <div class="profile">
-      <h2>
-        <a href="./profile.html">
-          <i class="fas fa-book"></i>
-          自己紹介
-          <i class="fas fa-book"></i>
-      </a>
-      </h2>
-      <h3>
-        - 色々むつばの事に関して書いてるよ
-      </h3>
-    </div>
-    <div class="copyright">
-      <h2>
-        <a href="./copyright.html">
-          <i class="far fa-copyright"></i>
-          著作権
-          <i class="far fa-copyright"></i>
-        </a>
-      </h2>
-      <h3>
-        - 著作権に関して書いてます
-      </h3>
-    </div>
-    <div class="specialthanks">
-      <h2>
-        <a href="./specialthanks.html">
-          <i class="fas fa-crown"></i>
-          スペシャルサンクス
-        <i class="fas fa-crown"></i>
-      </a>
-      </h2>
-      <h3>
-        - このWebサイトに協力してくれた皆さま
-      </h3>
-    </div>
-  </div>
   <div class="up_center">
     <img border="0" src="./image/image_2.png" class="set_center">
+    <header>
+    ﻿  <nav>
+        <ul>
+          <li>
+            <a href="./profile.html">
+              <i class="fas fa-book"></i>
+                自己紹介
+              <i class="fas fa-book"></i>
+            </a>
+          </li>
+          <li>
+            <a href="./copyright.html">
+              <i class="far fa-copyright"></i>
+              著作権
+              <i class="far fa-copyright"></i>
+            </a>
+          </li>
+          <li>
+              <a href="./specialthanks.html">
+                <i class="fas fa-crown"></i>
+                スペシャルサンクス
+              <i class="fas fa-crown"></i>
+            </a>
+          </li>
+          <li>
+              <a href="./distribution.html">
+                <i class="fas fa-microchip"></i>
+                配布プラグイン一覧
+              <i class="fas fa-microchip"></i>
+            </a>
+          </li>
+      </ul>
+    </nav>
+  </header>
+  </div>
+  <div class="updatelog">
+    <div class="updatelog_title">
+      <h1>
+      サイトの軌跡(アップデートログ)
+      </h1>
+    </div>
+    <div class="update_note">
+      <div class="updatelog_letter_title">
+        <p>
+          V.1.0｜ウェブサイトの公開｜ 2020/08/29-15:00
+        </p>
+      </div>
+      <div class="updatelog_letter_plus">
+        <p>
+            <i class="fas fa-plus"></i>
+            自己紹介を記載
+        </p>
+      </div>
+      <div class="updatelog_letter_plus">
+        <p>
+            <i class="fas fa-plus"></i>
+            著作権を記載
+        </p>
+      </div>
+      <div class="updatelog_letter_plus">
+        <p>
+            <i class="fas fa-plus"></i>
+            スペシャルサンクスを記載
+        </p>
+      </div>
+      <div class="updatelog_letter_title">
+        <p>
+          V.1.1｜変更｜ 2020/09/06-22:00
+        </p>
+      </div>
+      <div class="updatelog_letter_plus">
+        <p>
+            <i class="fas fa-plus"></i>
+            サイトの軌跡を追加
+        </p>
+      </div>
+      <div class="updatelog_letter_plus">
+        <p>
+            <i class="fas fa-plus"></i>
+            配布プラグイン一覧を作成
+        </p>
+      </div>
+      <div class="updatelog_letter_leaf">
+        <p>
+            <i class="fas fa-leaf"></i>
+            トップ画面に合った選択を上に移動
+        </p>
+      </div>
+      </div>
+    </div>
   </div>
   <div class="douwn_left">
     <p>
