cssを１つに纏めたりして整理整頓

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/e7b6124346.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./assets/css/normal/style.css">
 </head>
 <body>
   <div class="set_go">
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class="up_center">
-    <img border="0" src="./image/image_2.png" class="set_center">
+    <img border="0" src="./assets/image/normal/image_2.png" class="set_center">
     <header>
     ﻿  <nav>
         <ul>
