--- a/distribution.html
+++ b/distribution.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/e7b6124346.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./distribution.css">
+  <link rel="stylesheet" href="./assets/css/normal/style.css">
 </head>
 <body>
   <div class="set_go">
@@ -25,6 +25,43 @@
     <div class="go_github">
       <a href="https://github.com/68mutuba" class="go_github"><i class="fab fa-github"></i></a>
     </div>
+  </div>
+  <div class="up_center">
+    <img border="0" src="./assets/image/normal/image_2.png" class="set_center">
+    <header>
+    ﻿  <nav>
+        <ul>
+          <li>
+            <a href="./profile.html">
+              <i class="fas fa-book"></i>
+                自己紹介
+              <i class="fas fa-book"></i>
+            </a>
+          </li>
+          <li>
+            <a href="./copyright.html">
+              <i class="far fa-copyright"></i>
+              著作権
+              <i class="far fa-copyright"></i>
+            </a>
+          </li>
+          <li>
+              <a href="./specialthanks.html">
+                <i class="fas fa-crown"></i>
+                スペシャルサンクス
+              <i class="fas fa-crown"></i>
+            </a>
+          </li>
+          <li>
+              <a href="./distribution.html">
+                <i class="fas fa-microchip"></i>
+                配布プラグイン一覧
+              <i class="fas fa-microchip"></i>
+            </a>
+          </li>
+      </ul>
+    </nav>
+  </header>
   </div>
   <div class="up_center">
     <img border="0" src="./image/image_2.png" class="set_center">
@@ -48,6 +85,20 @@
     <p>
       このホームページに関するすべての著作権は68mutubaに帰属します。無断転載を禁じます。
     </p>
+  </div>
+  <div class="set_go">
+    <div class="go_top">
+      <a href="./index.html" class="go_top"><i class="fas fa-home"></i></a>
+    </div>
+    <div class="go_twitter">
+      <a href="https://twitter.com/68mutuba_2" class="go_twitter"><i class="fab fa-twitter-square"></i></a>
+    </div>
+    <div class="go_youtube">
+      <a href="https://bit.ly/31slxIz" class="go_youtube"><i class="fab fa-youtube"></i></a>
+    </div>
+    <div class="go_github">
+      <a href="https://github.com/68mutuba" class="go_github"><i class="fab fa-github"></i></a>
+    </div>
   </div>
 </body>
 </html>
