--- a/profile.html
+++ b/profile.html
@@ -8,9 +8,46 @@
   <title>--| mutuba's HomePage Profile|--  </title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/e7b6124346.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./profile.css">
+  <link rel="stylesheet" href="./assets/css/normal/style.css">
 </head>
   <body>
+    <div class="up_center">
+      <img border="0" src="./assets/image/normal/image_2.png" class="set_center">
+      <header>
+      ﻿  <nav>
+          <ul>
+            <li>
+              <a href="./profile.html">
+                <i class="fas fa-book"></i>
+                  自己紹介
+                <i class="fas fa-book"></i>
+              </a>
+            </li>
+            <li>
+              <a href="./copyright.html">
+                <i class="far fa-copyright"></i>
+                著作権
+                <i class="far fa-copyright"></i>
+              </a>
+            </li>
+            <li>
+                <a href="./specialthanks.html">
+                  <i class="fas fa-crown"></i>
+                  スペシャルサンクス
+                <i class="fas fa-crown"></i>
+              </a>
+            </li>
+            <li>
+                <a href="./distribution.html">
+                  <i class="fas fa-microchip"></i>
+                  配布プラグイン一覧
+                <i class="fas fa-microchip"></i>
+              </a>
+            </li>
+        </ul>
+      </nav>
+    </header>
+    </div>
     <div class="set_go">
       <div class="go_top">
         <a href="./index.html" class="go_top"><i class="fas fa-home"></i></a>
@@ -28,7 +65,7 @@
     <div class="set_introduction">
       <div class="set_icon_and_name">
         <div class="icon">
-          <img border="0" src="./image/profile_icon.JPG" class="set_icon">
+          <img border="0" src="./assets/image/normal/profile_icon.JPG" class="set_icon">
         </div>
         <div class="set_left">
           <h1>
@@ -84,7 +121,7 @@
       </div>
     </div>
     <div class="up_center">
-      <img border="0" src="./image/image_2.png" class="set_center">
+      <img border="0" src="./assets/image/normal/image_2.png" class="set_center">
     </div>
     <div class="douwn_left">
       <p>
