--- a/specialthanks.html
+++ b/specialthanks.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/e7b6124346.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./specialthanks.css">
+  <link rel="stylesheet" href="./assets/css/normal/style.css">
   <body>
     <div class="set_go">
       <div class="go_top">
@@ -24,6 +24,43 @@
       <div class="go_github">
         <a href="https://github.com/68mutuba" class="go_github"><i class="fab fa-github"></i></a>
       </div>
+    </div>
+    <div class="up_center">
+      <img border="0" src="./image/image_2.png" class="set_center">
+      <header>
+      ﻿  <nav>
+          <ul>
+            <li>
+              <a href="./profile.html">
+                <i class="fas fa-book"></i>
+                  自己紹介
+                <i class="fas fa-book"></i>
+              </a>
+            </li>
+            <li>
+              <a href="./copyright.html">
+                <i class="far fa-copyright"></i>
+                著作権
+                <i class="far fa-copyright"></i>
+              </a>
+            </li>
+            <li>
+                <a href="./specialthanks.html">
+                  <i class="fas fa-crown"></i>
+                  スペシャルサンクス
+                <i class="fas fa-crown"></i>
+              </a>
+            </li>
+            <li>
+                <a href="./distribution.html">
+                  <i class="fas fa-microchip"></i>
+                  配布プラグイン一覧
+                <i class="fas fa-microchip"></i>
+              </a>
+            </li>
+        </ul>
+      </nav>
+    </header>
     </div>
     <div class="specialthanks">
       <h1>
@@ -50,9 +87,17 @@
         <h3>
           - Web製作のお手伝いをしていただきました。
         </h3>
+      <div class="xCryker">
+        <h2>
+          <a href="https://twitter.com/xcryker">♠ xCryker ♣ЙЁФЫ￡♡様</a>
+        </h2>
+      </div>
+       <h3>
+         - クリスマスバージョンのトップ画面のデザインを監修していただきました。<br>
+        </h3>
     </div>
     <div class="up_center">
-      <img border="0" src="./image/image_2.png" class="set_center">
+      <img border="0" src="./assets/image/normal/image_2.png" class="set_center">
     </div>
     <div class="douwn_left">
       <p>
