ChristmasVersion！2020年12月25日 14時20分

--- a/index.html
+++ b/index.html
@@ -5,127 +5,242 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>--| mutuba's HomePage Top|--  </title>
+  <title>むつばのホームページ</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/e7b6124346.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./assets/css/normal/style.css">
+  <link rel="stylesheet" href="./assets/css/christmas/style.css">
 </head>
 <body>
-  <div class="set_go">
-    <div class="go_top">
-      <a href="./index.html" class="go_top"><i class="fas fa-home"></i></a>
-    </div>
-    <div class="go_twitter">
-      <a href="https://twitter.com/68mutuba_2" class="go_twitter"><i class="fab fa-twitter-square"></i></a>
-    </div>
-    <div class="go_youtube">
-      <a href="https://bit.ly/31slxIz" class="go_youtube"><i class="fab fa-youtube"></i></a>
-    </div>
-    <div class="go_github">
-      <a href="https://github.com/68mutuba" class="go_github"><i class="fab fa-github"></i></a>
-    </div>
-  </div>
   <div class="up_center">
-    <img border="0" src="./assets/image/normal/image_2.png" class="set_center">
-    <header>
-    ﻿  <nav>
-        <ul>
-          <li>
-            <a href="./profile.html">
-              <i class="fas fa-book"></i>
-                自己紹介
-              <i class="fas fa-book"></i>
-            </a>
-          </li>
-          <li>
-            <a href="./copyright.html">
-              <i class="far fa-copyright"></i>
-              著作権
-              <i class="far fa-copyright"></i>
-            </a>
-          </li>
-          <li>
-              <a href="./specialthanks.html">
-                <i class="fas fa-crown"></i>
-                スペシャルサンクス
-              <i class="fas fa-crown"></i>
-            </a>
-          </li>
-          <li>
-              <a href="./distribution.html">
-                <i class="fas fa-microchip"></i>
-                配布プラグイン一覧
-              <i class="fas fa-microchip"></i>
-            </a>
-          </li>
-      </ul>
-    </nav>
-  </header>
+    <a href="./index.html">
+    <img src="./assets/image/christmas/image_3.png" alt="メインタイトル" class="main_title">
+    </a>
   </div>
-  <div class="updatelog">
-    <div class="updatelog_title">
+  <div class="image">
+    <img src="./assets/image/christmas/christmas_wreath_illust.png" alt="クリスマスリース" class="christmas_wreath_illust">
+    <img src="./assets/image/christmas/Santa_Claus.png" alt="サンタクロース" class="santa_claus">
+    <img src="./assets/image/christmas/Merry_Christmas.png" alt="メリークリスマス" class="merry_christmas">
+    <a href="https://twitter.com/68mutuba_2">
+    <img src="./assets/image/christmas/Twitter_Logo_Blue.png" alt="ツイッター" class="twitter">
+    </a>
+    <a href="https://github.com/68mutuba">
+      <img src="./assets/image/christmas/GitHub-Mark-32px.png" alt="GitHub" class="github">
+    </a>
+    <a href="https://bit.ly/31slxIz">
+    <img src="./assets/image/christmas/youtube_social_icon_red.png" alt="ユーチューブ" class="youtube">
+    </a>
+   </div>
+    <div class="set_introduction">
+      <div class="set_icon_and_name">
+        <div class="icon">
+          <img src="./assets/image/christmas/profile_icon.JPG" alt="プロフィールアイコン" class="set_icon">
+        </div>
+        <div class="set_left">
+          <h1>
+            ★自己紹介★
+          </h1>
+            やっほー「むつば」だよ(*'▽') </br>
+            ぼーっとしてる人（実際ぼーっとしてないのでぼーっとして生きていたい）</br>
+            得意なことはなく特異なところはある</br>
+            <a href="https://matchatb.wixsite.com/coretol" target="_blank" rel="noopener noreferrer">Coretol</a>のDeveloper班でプラグインカキカキしてる！</br>
+            <a href="https://seesaawiki.jp/coretol/" target="_blank" rel="noopener noreferrer">CoretolのWiki</a>製作責任者</br>
+            </br>
+            配布プラグイン作成者！( ･´ｰ･｀)</br>
+            花火を勝手に作ってくれるプラグインを配布してるよ！</br>
+            とても面白いプラグインだから遊んでみてね(宣伝)</br>
+            </br>
+            ウェブサイトはhtmlとcssとjsを組み合わせて作ってるだけだし凝ったもの作れないし唯々組み合わせてるだけです</br>
+            </br>
+            よくツイッターで嘆いたり嘆いていなかったりRTしまくったりファボしまくったりしてる</br>
+            </br>
+            <h2>
+            ・支援絵に関して
+            </h2>
+              Twitterで支援絵があるときは <a href="https://twitter.com/search?q=%23%E3%82%80%E3%81%A4%E3%81%B0%E3%81%AE%E5%8D%9A%E7%89%A9%E9%A4%A8&src=typed_query&f=live" target="_blank" rel="noopener noreferrer">
+                「#むつば絵の博物館」
+              </a>
+              でツイートしてくれれば有難くみさせてもらいます！</br>
+              （現状来るようなことしてないんですがね）</br>
+            <h2>
+            ・SNS系
+            </h2>
+            <div class="set_bold">
+              <div class="set_color">
+                アイコン等に関して</br>
+                Twiter、Discord、GitHub、BitBucket、Youtube等</br>
+                全てのアイコンは絵師さんの方々に作ってもらった大変ありがたい絵です。</br>
+                その絵を転載、とても見苦しい加工(アダルト、グロ等)、自作発言等、絵師さんに失礼に当たる行為全ておやめください。</br>
+              </div>
+            </div>
+            <a href="https://twitter.com/68mutuba_2" target="_blank" rel="noopener noreferrer">むつじぃ(むつば)[@68mutuba_2]</a></br>
+            - アイコン → リア友</br>
+            - ヘッダー → リア友</br>
+            </br>
+            Youtube → <a href="https://bit.ly/31slxIz" target="_blank" rel="noopener noreferrer">68むつば</a></br>
+            - アイコン → リア友</br>
+            </br>
+            Discord →　68[むつば]#7881</br>
+            - アイコン → フラットさん</br>
+            </br>
+          <h2>
+            ・プラグインに関して</br>
+          </h2>
+            ぼーっとまったりほんわか(*'▽')書いてるから依頼されても作れないし、</br>
+            まず高難易度なことが出来ない人なので依頼は多分受け付けないとおもうよ！</br>
+            今後もしかしたらワンちゃん受け付けるかもしれない</br>
+          <h2>
+            ・企画実績
+          </h2>
+            <a href="https://mc-rts.tprj.xyz/" target="_blank" rel="noopener noreferrer">
+              RedTownServer
+            </a>
+              様 『
+            <a href="https://youtu.be/kijBw2rcl0Y" target="_blank" rel="noopener noreferrer">
+              鉱石大会
+            </a>
+            』(2020年12月20日、
+            <a href="https://www.youtube.com/channel/UCXK59Xg3TtMrx5PiO5d4DlQ?sub_confirmation=1" target="_blank" rel="noopener noreferrer">ねこみかん ch.</a>
+            )
+            <br><br>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
       <h1>
-      サイトの軌跡(アップデートログ)
+        《著作権》
       </h1>
+      <h3>
+        当サイトに掲載されている情報についての著作権は放棄しておりません。<br>
+        当サイト記事からの引用に関しましては「引用元の明示」によって無償で引用頂けます。<br>
+        ただし、全文転載はお断りいたしております。<br>
+        また、このサイトにて配布している著作物のこのサイトを経由しないダウンロードURLの拡散は、ご遠慮ください。<br>
+        引用許可範囲についても、事前予告なくこれを変更する事があります。<br>
+        また、引用させていただいている文献の知的所有権はそれぞれの著作者・団体に帰属しております。<br>
+        著作権や肖像権に関して問題がありましたらご連絡ください。速やかに対処いたします。<br>
+      </h3>
     </div>
-    <div class="update_note">
-      <div class="updatelog_letter_title">
-        <p>
-          V.1.0｜ウェブサイトの公開｜ 2020/08/29-15:00
-        </p>
+    <div class="specialthanks">
+      <h1>
+        《スペシャルサンクス》
+      </h1>
+      <h3>
+        - 名前の部分をクリックしたらそのお方のWebサイトに飛びます。
+      </h3>
+      <div class="naz7z">
+        <h2>
+          <a href="https://naz7z.github.io/">ナズナ様</a>
+        </h2>
       </div>
-      <div class="updatelog_letter_plus">
-        <p>
-            <i class="fas fa-plus"></i>
-            自己紹介を記載
-        </p>
+        <h3>
+          - Webサイトの形状を参考にさせていただきました。(Ver.Normal)<br>
+          - 著作権の部分を1語1句誤字脱字無しで使わせていただきました。<br>
+          - 承諾ありがとうございます。
+        </h3>
+      <div class="Toto31010">
+        <h2>
+          <a href="https://tprj.github.io/">とと様</a>
+        </h2>
       </div>
-      <div class="updatelog_letter_plus">
-        <p>
-            <i class="fas fa-plus"></i>
-            著作権を記載
-        </p>
+        <h3>
+          - Web製作のお手伝いをしていただきました。<br>
+          - JavaScript導入するときにご指導をしていただきました。<br>
+        </h3>
+      <div class="xCryker">
+        <h2>
+          <a href="https://twitter.com/xcryker">♠ xCryker ♣ЙЁФЫ￡♡様</a>
+        </h2>
       </div>
-      <div class="updatelog_letter_plus">
-        <p>
-            <i class="fas fa-plus"></i>
-            スペシャルサンクスを記載
-        </p>
-      </div>
-      <div class="updatelog_letter_title">
-        <p>
-          V.1.1｜変更｜ 2020/09/06-22:00
-        </p>
-      </div>
-      <div class="updatelog_letter_plus">
-        <p>
-            <i class="fas fa-plus"></i>
-            サイトの軌跡を追加
-        </p>
-      </div>
-      <div class="updatelog_letter_plus">
-        <p>
-            <i class="fas fa-plus"></i>
-            配布プラグイン一覧を作成
-        </p>
-      </div>
-      <div class="updatelog_letter_leaf">
-        <p>
-            <i class="fas fa-leaf"></i>
-            トップ画面に合った選択を上に移動
-        </p>
-      </div>
+      <h3>
+        - クリスマスバージョンのトップ画面のデザインを監修していただきました。<br>
+      </h3>
+    </div>
+    <div class="distribution_plugin">
+      <h1>
+        《配布プラグイン一覧表》
+      </h1>
+      <div class="fireworks">
+        <h2>
+          【FireWorks】 <br>
+          <a href="https://www.spigotmc.org/resources/1-16-x-fireworks.82431/">Spigot Forum-英語</a> <br>
+          <a href="https://forum.civa.jp/viewtopic.php?f=15&t=526&p=1971">MCJF(Minecraft Japan Forum)-日本語</a>
+        </h2>
       </div>
     </div>
-  </div>
-  <div class="douwn_left">
-    <p>
-      Copyright ©2020 68mutuba All Rights Reserved.
-    </p>
-    <p>
-      このホームページに関するすべての著作権は68mutubaに帰属します。無断転載を禁じます。
-    </p>
-  </div>
+    <div class="updatelog">
+      <div class="updatelog_title">
+        <h1>
+        《サイトの軌跡～アップデートログ～》
+        </h1>
+      </div>
+        <div class="updatelog_letter_title">
+          <p>
+            V.1.0｜ウェブサイトの公開｜ 2020/08/29-15:00
+          </p>
+        </div>
+        <div class="updatelog_letter_plus">
+          <p>
+              <i class="fas fa-plus"></i>
+              自己紹介を記載
+          </p>
+        </div>
+        <div class="updatelog_letter_plus">
+          <p>
+              <i class="fas fa-plus"></i>
+              著作権を記載
+          </p>
+        </div>
+        <div class="updatelog_letter_plus">
+          <p>
+              <i class="fas fa-plus"></i>
+              スペシャルサンクスを記載
+          </p>
+        </div>
+        <div class="updatelog_letter_title">
+          <p>
+            V.1.1｜変更｜ 2020/09/06-22:00
+          </p>
+        </div>
+        <div class="updatelog_letter_plus">
+          <p>
+              <i class="fas fa-plus"></i>
+              サイトの軌跡を追加
+          </p>
+        </div>
+        <div class="updatelog_letter_plus">
+          <p>
+              <i class="fas fa-plus"></i>
+              配布プラグイン一覧を作成
+          </p>
+        </div>
+        <div class="updatelog_letter_leaf">
+          <p>
+              <i class="fas fa-leaf"></i>
+              トップ画面に合った選択を上に移動
+          </p>
+        </div>
+        <div class="updatelog_letter_title">
+          <p>
+            クリスマス 2020｜限定｜ 2020/12/25-14:20
+          </p>
+        </div>
+        <div class="updatelog_letter_star">
+          <p>
+             <i class="fas fa-star"></i>
+             クリスマス仕様！
+          </p>
+        </div>
+        <div class="updatelog_letter_star">
+          <p>
+             <i class="fas fa-star"></i>
+             背景は夜空をイメージしてみました！
+          </p>
+        </div>
+        <div class="updatelog_letter_star">
+          <p>
+             <i class="fas fa-star"></i>
+             JavaScriptで雪を降らせてみたかった(え？)
+          </p>
+        </div>
+      </div>
 </body>
-</html>
