更新日の間違えの修正、contact.htmlの文章の付け加え

--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,7 @@
           <div class="writetwitterid">
             <label for="sendTwitterID"><p>TwitterID</p></label>
             <p>@の後</p>
+            <p>返信が欲しい場合はお書きください。後に返信できる内容であればTwitterに伺います。</p>
             <p><input id="sendTwitterID" name="entry.820220872" placeholder="@68mutuba_2" required=""></p>
           </div>
           <div class="writeform">
