〇V.2.1｜ブログの追加｜ 2021/03/24 むつばのブログ　『制作時の感想』

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <i class="fas fa-user-circle"></i>
           </div>
             <h3>自己紹介</h3>
-            むつばのことが書いてあるページ <br>
+            むつばのことが書いてあるページ
           <a href="profile.html">
             <h5>>>ここをクリック！<<</h5>
           </a>
@@ -66,7 +66,7 @@
             <i class="far fa-copyright"></i>
           </div>
             <h3>コピーライト</h3>
-            著作権に関して書いているページ <br>
+            著作権に関して書いているページ
           <a href="copyright.html">
             <h5>>>ここをクリック！<<</h5>
           </a>
@@ -78,7 +78,7 @@
             <i class="far fa-keyboard"></i>
           </div>
             <h3>配布物</h3>
-            配布物紹介しているページ <br>
+            配布物紹介しているページ
           <a href="distribution.html">
             <h5>>>ここをクリック！<<</h5>
           </a>
@@ -90,7 +90,7 @@
             <i class="fas fa-user-tag"></i>
           </div>
             <h3>スペシャルサンクス</h3>
-            サイト制作に関わってくれた人々 <br>
+            サイト制作に関わってくれた人々
           <a href="specialthanks.html">
             <h5>>>ここをクリック！<<</h5>
           </a>
@@ -109,7 +109,6 @@
           </div>
             <h3>Twitter</h3>
             むつばのツイッター <br>
-            @68mutuba_2
           <a href="https://twitter.com/68mutuba_2">
             <h5>>>ここをクリック！<<</h5>
           </a>
@@ -122,7 +121,6 @@
           </div>
             <h3>Youtube</h3>
             むつばのユーチューブ <br>
-            <br>
           <a href="https://bit.ly/31slxIz">
             <h5>>>ここをクリック！<<</h5>
           </a>
@@ -135,7 +133,6 @@
           </div>
             <h3>GitHub</h3>
             むつばのGitHub <br>
-            <br>
           <a href="https://github.com/68mutuba">
             <h5>>>ここをクリック！<<</h5>
           </a>
@@ -163,11 +160,22 @@
             <i class="fas fa-mail-bulk"></i>
           </div>
             <h3>Contact</h3>
-            <br>
             お問い合わせフォーム
             <a href="contact.html">
               <h5>>>ここをクリック！<<</h5>
             </a>
+        </span>
+      </div>
+      <div class="box blog">
+        <span>
+          <div class="icon">
+            <i class="fas fa-blog"></i>
+          </div>
+          <h3>Blog</h3>
+          ブログ
+          <a href="blog.html">
+            <h5>>>ここをクリック！<<</h5>
+          </a>
         </span>
       </div>
     </div>
@@ -178,8 +186,8 @@
     <div class="now_version">
       <h3>現在のバージョン</h3>
       <p>
-        &nbsp;〇V.2.0｜新しいデザインに一新｜ 2021/03/13<br>
-        &nbsp;&nbsp;&nbsp;『全ページのデザイン変更』<br>
+        &nbsp;〇V.2.1｜ブログの追加｜ 2021/03/24<br>
+        &nbsp;&nbsp;&nbsp;むつばのブログ　『制作時の感想』<br>
       </p>
     </div>
     <input id="acd-check1" class="acd-check" type="checkbox">
@@ -187,6 +195,8 @@
     <div class="acd-content">
       <div class="update_note">
         <p>
+          &nbsp;〇V.2.0｜新しいデザインに一新｜ 2021/03/13<br>
+          &nbsp;&nbsp;&nbsp;『全ページのデザイン変更』<br>
           &nbsp;〇V.1.1｜変更｜ 2020/09/06<br>
           &nbsp;&nbsp;&nbsp;サイトの軌跡を追加<br>
           &nbsp;&nbsp;&nbsp;配布プラグイン一覧を作成<br>
